--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 /* css file
-Designed by Mario, Tony, Maryln
+Designed by Mario, Tony, Marilyn, Olumide
 sorry if i got the name wrong*/
 . content{
     float: right;
