--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,13 +4,16 @@ bbody {
   .container {
   background-color: #e7e7e7;
   
-      height: 650px;
+      height: auto;
+      overflow: auto;
+
   
   }
   
   
   .col-sm-10 {
-      height: 600px;
+      height: auto;
+
       
   }
   
@@ -18,6 +21,7 @@ bbody {
       text-align: center;
       line-height: 80px;
       padding: 5px;
+      height: 600px;
       
   
   }
@@ -43,3 +47,4 @@ bbody {
   background-image: url("");
   
   }
+
